--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -57,5 +57,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results
-          path: allure-results
+          name: API E2E execution allure-report
+          path: allure-report
