--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -65,7 +65,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: 'gh-pages'
+          publish_branch: 'main'
           publish_dir: ./allure-report
           destination_dir: api-e2e-report
 
