--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,4 +1,8 @@
-name: e2e-tests
+name: Run API Automated e2e-tests
+permissions:
+    contents: write
+    pages: write
+    id-token: write
 
 on:
   push:
