--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -74,6 +74,5 @@ jobs:
           destination_dir: api-e2e-report
 
       - name: Report summary
-        if: always()
-        run: |
-          echo "Report URL: https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/api-e2e-report/index.html"
+        if: github.ref == 'refs/heads/main'
+        run: echo "Report URL- https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/api-e2e-report/index.html"
