--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,78 +1,78 @@
-name: Run API Automated e2e-tests
-permissions:
-    contents: write
-    pages: write
-    id-token: write
-
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch: {}
-
-jobs:
-  e2e:
-    name: Run E2E tests
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.11]
-    env:
-      # Optional: provide an API auth token via repository secrets if your tests need it
-      API_AUTH_TOKEN: ${{ secrets.API_AUTH_TOKEN }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install pytest requests allure-pytest; fi
-      - name: Run pytest (collect Allure results)
-        run: |
-          mkdir -p allure-results
-          pytest --maxfail=1 --disable-warnings -q --alluredir=allure-results --junitxml=pytest-results.xml
-        # If your tests need an auth token at runtime, pass it via env (example):
-        env:
-          API_AUTH_TOKEN: ${{ secrets.API_AUTH_TOKEN }}
-
-      - name: Generate Allure HTML report
-        if: always()
-        run: |
-           wget https://github.com/allure-framework/allure2/releases/download/2.24.0/allure-2.24.0.zip
-           unzip allure-2.24.0.zip
-           ./allure-2.24.0/bin/allure generate --single-file allure-results --clean -o allure-report
-
-      - name: Upload Allure results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: API E2E execution allure-report
-          path: allure-report
-
-      - name: Deploy report to GitHub  Pages
-        if: github.ref == 'refs/heads/main'
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: 'gh-pages'
-          publish_dir: ./allure-report
-          destination_dir: api-e2e-report
-
-      - name: Report summary
-        if: github.ref == 'refs/heads/main'
-        run: echo "Report URL- https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/api-e2e-report/index.html"
+#name: Run API Automated e2e-tests
+#permissions:
+#    contents: write
+#    pages: write
+#    id-token: write
+#
+#on:
+#  push:
+#    branches: [ main, master ]
+#  pull_request:
+#    branches: [ main, master ]
+#  workflow_dispatch: {}
+#
+#jobs:
+#  e2e:
+#    name: Run E2E tests
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        python-version: [3.11]
+#    env:
+#      # Optional: provide an API auth token via repository secrets if your tests need it
+#      API_AUTH_TOKEN: ${{ secrets.API_AUTH_TOKEN }}
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#
+#      - name: Setup Python ${{ matrix.python-version }}
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Cache pip
+#        uses: actions/cache@v4
+#        with:
+#          path: ~/.cache/pip
+#          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pip-
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install pytest requests allure-pytest; fi
+#      - name: Run pytest (collect Allure results)
+#        run: |
+#          mkdir -p allure-results
+#          pytest --maxfail=1 --disable-warnings -q --alluredir=allure-results --junitxml=pytest-results.xml
+#        # If your tests need an auth token at runtime, pass it via env (example):
+#        env:
+#          API_AUTH_TOKEN: ${{ secrets.API_AUTH_TOKEN }}
+#
+#      - name: Generate Allure HTML report
+#        if: always()
+#        run: |
+#           wget https://github.com/allure-framework/allure2/releases/download/2.24.0/allure-2.24.0.zip
+#           unzip allure-2.24.0.zip
+#           ./allure-2.24.0/bin/allure generate --single-file allure-results --clean -o allure-report
+#
+#      - name: Upload Allure results
+#        if: always()
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: API E2E execution allure-report
+#          path: allure-report
+#
+#      - name: Deploy report to GitHub  Pages
+#        if: github.ref == 'refs/heads/main'
+#        uses: peaceiris/actions-gh-pages@v3
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          publish_branch: 'gh-pages'
+#          publish_dir: ./allure-report
+#          destination_dir: api-e2e-report
+#
+#      - name: Report summary
+#        if: github.ref == 'refs/heads/main'
+#        run: echo "Report URL- https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/api-e2e-report/index.html"
