--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -64,6 +64,10 @@ jobs:
           name: API E2E execution allure-report
           path: allure-report
 
+      - name: Report summary
+        if: always() && github.ref == 'refs/heads/main'
+        run: echo "Report URL- https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/api-e2e-report/index.html"
+
       - name: Deploy report to GitHub  Pages
         if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
